<resources>
    <string name="app_name">Serwiser</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Hasło</string>
    <string name="login">Zaloguj</string>
    <string name="login_instead">Masz już konto? Zaloguj się.</string>
    <string name="register_instead">Nie masz jeszcze konta? Zarejestruj się.</string>
    <string name="register">Zarejestruj</string>
    <string name="logout">Wyloguj</string>
    <string name="name">Podaj nazwę firmy</string>
    <string name="telephoneNumber">Podaj numer telefonu</string>
    <string name="finishRegister">Potwierdź dane</string>
    <string name="companyDataText">Uzupełnij dane firmy</string>
    <string name="companyLocation">Podaj adres firmy</string>
    <string name="title_activity_main_content">mainContent</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="addReportText">Dodaj zgłoszenie</string>
    <string name="reportTitle">Podaj tytuł zgłoszenia</string>
    <string name="isWarrantyText">Czy zgłoszenie podlega gwarancji?</string>
    <string name="reportDescriptionText">Dodaj opis szczegółowy</string>
    <string name="addReportBtnText">Zgłoś awarię</string>
    <string name="loginText">Zaloguj się</string>
    <string name="registerText">Zarejestruj się</string>
    <string name="editRaport">Edytuj protokół</string>
    <string name="dateInputText">Podaj date wykonania</string>
    <string name="partsUsedText">Podaj użyte części</string>
    <string name="costText">Koszt wykonania</string>
    <string name="isDoneText">Czy zgłoszenie jest zakończone?</string>
    <string name="switchViewText">Pokaż zakończone protokoły</string>
    <string name="title_activity_main_content_done">mainContentDone</string>
    <string name="inWorkText">Twoje zgłoszenia w toku</string>
    <string name="doneText">Zakończone zgłoszenia</string>
    <string name="switchViewText2">Pokaż protokoły w toku</string>
    <string name="editProfileText">Edytuj profil</string>
    <string name="setNewName">Podaj nową nazwę firmy</string>
    <string name="setNewAddress">Podaj nowy adres firmy</string>
    <string name="setNewNumber">Podaj nowy numer telefonu</string>
    <string name="appealText">Odwołaj się do naprawy</string>
    <string name="appealtext">Odwołaj się</string>
    <string name="appealDescText">Dokładnie opisz problem</string>
</resources>