<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".editReport">

    <TextView
        android:id="@+id/editTitle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="84dp"
        android:paddingTop="15dp"
        android:scaleX="1.2"
        android:scaleY="1.1"
        android:text="@string/editRaport"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editDate"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/text_edit_field"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toTopOf="@+id/editCost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTitle"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dateInputText" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editParts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/partsUsedText"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDone" />

    <CheckBox
        android:id="@+id/editDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="103dp"
        android:backgroundTint="#00FFFFFF"
        android:buttonTint="@color/white"
        android:buttonTintMode="src_atop"
        android:text="@string/isDoneText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editParts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCost"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/costText"
        android:inputType="numberSigned"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/editDone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/editDone"
        app:layout_constraintTop_toBottomOf="@+id/editDate"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="270dp"
        android:layout_height="0dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="79dp"
        android:backgroundTint="@color/white"
        android:text="@string/finishRegister"
        android:textColor="@color/contrastColorPurple"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editParts" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="43dp"
        android:layout_height="41dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="54dp"
        android:background="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>